fix: use scrollbar-width style to force no scrollbar
firefox on windows was using the windows native widget which looks horrible
this solution should disable it everywhere since there is no guarantee of sane behaviour between platforms

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -21,7 +21,3 @@ a,
   width: fit-content;
 }
 
-*::-webkit-scrollbar {
-    width: 0;
-    background: transparent;
-}
